syntax = "proto3";

package kevsn.grpc.protobuf;

option java_multiple_files = true;
message EchoRequest {
	string msg = 1;
	int32 intdex = 2;
}

message EchoResponse {
	string msg = 1;
	int32 index = 2;
}

service EchoService {
	rpc echoSimple (EchoRequest) returns (EchoResponse);
	rpc echoReqStream (stream EchoRequest) returns (EchoResponse);
	rpc echoRespStream (EchoRequest) returns (stream EchoResponse);
	rpc echoBothStream (stream EchoRequest) returns (stream EchoResponse);
}